crates/vize_compiler_sfc/src/script/snapshots/vize_compiler_sfc__script__define_props_destructure__tests__snapshots__basic_usage.snap
---
source: crates/vize_compiler_sfc/src/script/define_props_destructure.rs
expression: result
---
console.log(__props.foo)
