crates/vize_compiler_sfc/src/script/snapshots/vize_compiler_sfc__script__define_props_destructure__tests__snapshots__complex_nested_function.snap
---
source: crates/vize_compiler_sfc/src/script/define_props_destructure.rs
expression: result
---
function processData() {
    const result = __props.data.map(item => {
        const inner = __props.config.map(c => c.value)
        return { item, inner }
    })
    return result
}
