crates/vize_compiler_sfc/src/script/snapshots/vize_compiler_sfc__script__define_props_destructure__tests__snapshots__destructuring_in_params.snap
---
source: crates/vize_compiler_sfc/src/script/define_props_destructure.rs
expression: result
---
const fn = ({ x, y }) => x + y
console.log(__props.data)
