crates/vize_compiler_sfc/src/script/snapshots/vize_compiler_sfc__script__define_props_destructure__tests__snapshots__function_param_same_name.snap
---
source: crates/vize_compiler_sfc/src/script/define_props_destructure.rs
expression: result
---
function test(value) {
    try {
    } catch {
    }
}
console.log(__props.value)
