crates/vize_compiler_sfc/src/script/snapshots/vize_compiler_sfc__script__define_props_destructure__tests__snapshots__member_expression_chain.snap
---
source: crates/vize_compiler_sfc/src/script/define_props_destructure.rs
expression: result
---
const name = __props.user.profile.name
const email = user?.contact?.email
const id = __props.user['id']
